--- a/application/src/main/webapp/css/mixins.less
+++ b/application/src/main/webapp/css/mixins.less
@@ -21,6 +21,11 @@
   align-items: center;
 }
 
+.overflow-wrap {
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+}
+
 // cross platform placeholder style
 .placeholder(@rules) {
   &::-webkit-input-placeholder {
